# practice-llm

./: README.md  Taskfile.yaml
0-foundations/: Taskfile.yaml
0-foundations/10-python-concepts/: .gitignore  pyproject.toml
0-foundations/10-python-concepts/docs/: 03_generators.md  04_context_managers.md  05_oop_meta.md
0-foundations/10-python-concepts/src/: __init__.py  decorators.py  dunder_methods.py  generators.py  oop_meta.py
0-foundations/10-python-concepts/tests/: test_decorators.py  test_dunder_methods.py
0-foundations/20-basics/: Taskfile.yaml  pyproject.toml
0-foundations/20-basics/docs/: 00_overview.md  02_autograd.md  03_neural_networks.md  04_tokenizers.md  05_recurrent_neural_networks.md  06_attention_mechanisms.md
0-foundations/20-basics/src/: attention.py  autograd.py  gpt.py
0-foundations/20-basics/tests/: test_attention.py  test_matrix.py  test_nn.py  test_tokenizer.py
0-foundations/30-pytorch-patterns/: README.md  Taskfile.yaml
1-ai-practitioner/: Taskfile.yaml
2-dl-systems/: Taskfile.yaml
3-ai-researcher/: Taskfile.yaml
apps/pytorch-patterns/: .gitignore  README.md  pyproject.toml
apps/pytorch-patterns/docs/: 00_overview.md  01_custom_datasets.md  02_custom_modules.md  03_training_loops.md  04_custom_autograd_loss.md  05_pytorch_hooks.md
apps/pytorch-patterns/src/: __init__.py  collate_padding.py  custom_autograd.py  custom_dataset.py  custom_module.py  hooks_debug.py  module_init.py  training_loop.py
apps/pytorch-patterns/tests/: test_custom_autograd.py  test_custom_dataset.py  test_custom_module.py  test_hooks_debug.py  test_trainer.py  test_training_loop.py
apps/scratch-llm/: .gitignore  README.md  Taskfile.yaml  pyproject.toml
apps/scratch-llm/data/: dataset.txt
apps/scratch-llm/docs/: 01_architecture.md  02_training_optimization.md
apps/scratch-llm/docs/llm-tutorials/: 02-data-prep.md  03-architecture.md  04-training.md
apps/scratch-llm/llm/: api.py  attention.py  dataset.py  embedding.py  generate.py  model.py  tokenizer.py
apps/scratch-llm/scripts/: gradio_app.py  inference.py  train.py
apps/transformer/: README.md  Taskfile.yaml  pyproject.toml
apps/transformer/docs/: 01_architecture.md
apps/transformer/modules/: attention.py
learning/: README.md  career-roadmap.md  full-roadmap.md
(+155 files in other folders)
