[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-concepts"
version = "0.1.0"
description = "In-depth understanding of advanced Python concepts used in deep learning and library design"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.setuptools]
packages = ["python_concepts"]
package-dir = {"python_concepts" = "src"}
