[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scratch-llm"
version = "0.1.0"
description = "A tiny, from-scratch implementation of a Transformer-based Large Language Model"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "fastapi",
    "uvicorn",
    "pydantic"
]

[tool.setuptools]
packages = ["llm"]
